# solana-naughts-and-crosses

./: .gitignore  README.md  run.sh
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs  utils.rs
program/: Cargo.toml
program/src/: game.rs  lib.rs
