[package]
name = "noughts-and-crosses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
home = "0.5.3"
program = { path = "../program" }
solana-sdk = "1.9.9"
solana-client = "1.9.8"
solana-program = "1.10.0"
thiserror = "1"
yaml-rust = "0.4"
